--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -33,7 +33,7 @@
     "start": "ts-node src/cli.ts",
     "dev": "NODE_OPTIONS='--loader ts-node/esm --experimental-specifier-resolution=node' ts-node --esm src/cli.ts",
     "link": "yarn link",
-    "test:cli": "NODE_OPTIONS='--loader ts-node/esm --experimental-specifier-resolution=node' ts-node --esm src/test-cli.ts",
+    "test:e2e": "NODE_OPTIONS='--loader ts-node/esm --experimental-specifier-resolution=node' ts-node --esm ./scripts/test-commit-hooks.ts",
     "postbuild": "chmod +x ./dist/src/cli.js",
     "link-cli": "yarn link && yarn run postbuild",
     "setup": "./setup-cli.sh",
@@ -41,7 +41,8 @@
   },
   "dependencies": {
     "chalk": "^5.3.0",
-    "commander": "^11.1.0"
+    "commander": "^11.1.0",
+    "openai": "^4.70.2"
   },
   "devDependencies": {
     "@jest/types": "^29.6.3",
