--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
+    "inquirer": "^12.0.1",
     "openai": "^4.70.2"
   },
   "devDependencies": {
