--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jest": "^29.7.0",
     "lefthook": "^1.7.2",
     "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   },
   "packageManager": "yarn@4.5.0"
