--- a/packages/gitguard/tsconfig.json
+++ b/packages/gitguard/tsconfig.json
@@ -40,6 +40,7 @@
   "include": [
     "src/**/*",
     "publisher.config.ts",
+    ".eslintrc.cjs",
     "scripts/**/*",
     ".publisher/**/*",
     "package.json",
