--- a/packages/gitguard/tsconfig.json
+++ b/packages/gitguard/tsconfig.json
@@ -1,47 +1,36 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "lib": [
-      "ES2022"
-    ],
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "lib": ["ES2022"],
     "outDir": "dist",
     "rootDir": ".",
     "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictBindCallApply": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
+    "declaration": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "emitDeclarationOnly": true,
-    "isolatedModules": true,
-    "declaration": true,
-    "sourceMap": true,
-    "baseUrl": ".",
+    "types": ["node","jest"],
+    "composite": true,
     "paths": {
       "@siteed/gitguard": [
         "./src/index.ts"
       ]
     },
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true
   },
   "include": [
     "src/**/*",
     "publisher.config.ts",
     ".eslintrc.cjs",
     "scripts/**/*",
+    "bin/**/*",
     ".publisher/**/*",
     "package.json",
     "jest.config.ts",
