--- a/packages/gitguard/tsconfig.json
+++ b/packages/gitguard/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "CommonJS",
-    "moduleResolution": "Node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "lib": ["ES2022"],
     "outDir": "dist",
     "rootDir": ".",
@@ -25,6 +25,10 @@
       ]
     },
   },
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifiers": true
+  },
   "include": [
     "src/**/*",
     "publisher.config.ts",
@@ -33,6 +37,7 @@
     "bin/**/*",
     ".publisher/**/*",
     "package.json",
+    "rollup.config.ts",
     "jest.config.ts",
     "jest.setup.ts"
   ],
