--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -10,11 +10,13 @@
     "url": "https://github.com/deeeed/universe",
     "directory": "packages/gitguard"
   },
-  "main": "./dist/cjs/index.js",
+  "main": "./dist/esm/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/types/index.d.ts",
   "type": "module",
-  "bin": "./dist/src/cli/gitguard.js",
+  "bin": {
+    "gitguard": "./dist/esm/gitguard.js"
+  },
   "files": [
     "dist",
     "package.json",
@@ -23,7 +25,9 @@
   ],
   "scripts": {
     "clean": "rimraf ./dist",
-    "build": "rollup -c",
+    "build:types": "tsc -p tsconfig.build.json",
+    "build:bundle": "rollup -c rollup.config.mjs",
+    "build": "yarn clean && yarn build:types && yarn build:bundle && yarn postbuild",
     "build:clean": "yarn clean && yarn build",
     "build:tsc": "tsc --project tsconfig.build.json",
     "typecheck": "tsc -p tsconfig.test.json --noEmit && tsc -p tsconfig.json --noEmit",
@@ -33,7 +37,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"bin/**/*.ts\"",
     "link": "yarn link",
     "test:e2e": "NODE_OPTIONS='--loader ts-node/esm --experimental-specifier-resolution=node' ts-node --esm ./scripts/test-commit-hooks.ts",
-    "postbuild": "chmod +x ./dist/src/cli/gitguard.js",
+    "postbuild": "chmod +x ./dist/esm/gitguard.js",
     "link-cli": "yarn link && yarn run postbuild",
     "gitguard": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./bin/gitguard.ts",
     "setup": "./setup-cli.sh",
@@ -64,5 +68,15 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/esm/index.js"
+    },
+    "./cli": {
+      "types": "./dist/types/gitguard.d.ts",
+      "import": "./dist/esm/gitguard.js"
+    }
   }
 }
