--- a/packages/gitguard/tsconfig.rollup.json
+++ b/packages/gitguard/tsconfig.rollup.json
@@ -6,14 +6,9 @@
     "types": [
       "node"
     ],
-    "declaration": true,
-    "declarationDir": "./dist/types",
-    "emitDeclarationOnly": true,
+    "declaration": false,
     "composite": false,
-    "rootDir": ".",
-    "paths": {
-      "@siteed/gitguard": ["./src"]
-    }
+    "rootDir": "."
   },
   "include": [
     "src/**/*",
