--- a/packages/gitguard/tsconfig.build.json
+++ b/packages/gitguard/tsconfig.build.json
@@ -6,17 +6,15 @@
     "types": [
       "node"
     ],
-    "declaration": true,
-    "declarationDir": "./dist/types",
-    "emitDeclarationOnly": true,
-    "composite": false,
+    "declaration": false,
     "rootDir": "src",
+    "composite": false,
+    "outDir": "./dist/cjs",
     "paths": {
       "@siteed/gitguard": [
         "./src"
       ]
-    },
-    "stripInternal": true
+    }
   },
   "include": [
     "src/**/*"
