--- a/packages/publisher/package.json
+++ b/packages/publisher/package.json
@@ -12,9 +12,7 @@
   "main": "dist/src/index.js",
   "module": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
-  "bin": {
-    "publisher": "./dist/bin/publisher.js"
-  },
+  "bin": "./dist/bin/publisher.js",
   "files": [
     "dist",
     "templates",
