build: include SonarLint settings in VSCode configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,4 +19,8 @@
   },
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
   "typescript.tsdk": "node_modules/typescript/lib",
+  "sonarlint.connectedMode.project": {
+    "connectionId": "siteed",
+    "projectKey": "deeeed_universe"
+  },
 }
