refactor(e2e): reorganize and optimize test runner logic

--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -29,11 +29,16 @@
     "build:types": "tsc --project tsconfig.types.json",
     "typecheck": "tsc -p tsconfig.test.json --noEmit && tsc -p tsconfig.json --noEmit",
     "test": "jest",
-    "test:e2e:debug": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./scripts/test-commit-hooks.ts",
-    "test:e2e:commit": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=commit-message",
-    "test:e2e:security": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=security",
-    "test:e2e:ai": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=ai-suggestions",
-    "test:e2e:large": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=large-commits",
+    "test:e2e:commit:basic": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=commit-message --scenario=basic-formatting",
+    "test:e2e:commit:monorepo": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=commit-message --scenario=monorepo-detection",
+    "test:e2e:commit:multi": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=commit-message --scenario=multi-package",
+    "test:e2e:security:secrets": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=security --scenario=secrets-detection",
+    "test:e2e:security:tokens": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=security --scenario=token-detection",
+    "test:e2e:ai:basic": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=ai-suggestions --scenario=basic-suggestions",
+    "test:e2e:ai:complex": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=ai-suggestions --scenario=complex-suggestions",
+    "test:e2e:large:size": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=large-commits --scenario=size-detection",
+    "test:e2e:large:files": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=large-commits --scenario=many-files",
+    "test:e2e:i": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --interactive",
     "test:e2e": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts",
     "lint": "eslint \"**/*.ts\"",
     "lint:fix": "eslint \"**/*.ts\" --fix",
