--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -49,6 +49,7 @@
     "unsetup": "./uninstall-cli.sh"
   },
   "dependencies": {
+    "@octokit/rest": "^21.0.2",
     "chalk": "^4.1.2",
     "commander": "^11.1.0",
     "inquirer": "^12.0.1",
