chore(gitguard): remove tag prefix from publisher configuration

--- a/packages/gitguard/publisher.config.json
+++ b/packages/gitguard/publisher.config.json
@@ -11,7 +11,7 @@
     "validateBuildArtifacts": true
   },
   "git": {
-    "tagPrefix": "gitguard@",
+    "tagPrefix": "",
     "requireCleanWorkingDirectory": true,
     "requireUpToDate": true,
     "requireUpstreamTracking": true,
