test(gitguard): migrate to jest projects setup with integration tests

--- a/packages/gitguard/tsconfig.json
+++ b/packages/gitguard/tsconfig.json
@@ -38,8 +38,10 @@
     "bin/**/*",
     ".publisher/**/*",
     "package.json",
-    "jest.config.ts",
+    "jest.config.cjs",
     "jest.setup.ts",
+    "jest.integration.config.ts",
+    "jest.integration.setup.ts",
     "e2e/**/*"
   ],
   "exclude": [
