--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -28,7 +28,21 @@
     "build:clean": "yarn clean && yarn build",
     "build:types": "tsc --project tsconfig.types.json",
     "typecheck": "tsc -p tsconfig.test.json --noEmit && tsc -p tsconfig.json --noEmit",
-    "test": "jest",
+    "test": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects unit",
+    "test:unit": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects unit",
+    "test:unit:watch": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects unit --watch",
+    "test:integration": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects integration",
+    "test:integration:watch": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects integration --watch",
+    "test:all": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects unit integration",
+    "test:e2e": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --interactive",
+    "test:e2e:init:basic": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=init --scenario=init-basic",
+    "test:e2e:init:global": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=init --scenario=init-global",
+    "test:e2e:init:monorepo": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=init --scenario=init-monorepo",
+    "test:e2e:status:basic": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-basic",
+    "test:e2e:status:global": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-global",
+    "test:e2e:status:local": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-local",
+    "test:e2e:status:ai": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-with-ai",
+    "test:e2e:status:show": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-show-command",
     "test:e2e:commit:basic": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=commit-message --scenario=basic-formatting",
     "test:e2e:commit:monorepo": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=commit-message --scenario=monorepo-detection",
     "test:e2e:commit:multi": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=commit-message --scenario=multi-package",
@@ -46,7 +60,6 @@
     "test:e2e:branch:split": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=branch-features --scenario=branch-split-suggestion",
     "test:e2e:branch:template": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=branch-features --scenario=pr-template-parsing",
     "test:e2e:branch:complex": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=branch-features --scenario=complex-branch-split",
-    "test:e2e": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --interactive ",
     "lint": "eslint \"**/*.ts\"",
     "lint:fix": "eslint \"**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"bin/**/*.ts\"",
@@ -78,6 +91,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "rollup": "^4.12.0",
     "ts-jest": "^29.1.1",
