--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -74,6 +74,7 @@
     "commander": "^11.1.0",
     "inquirer": "^12.0.1",
     "js-tiktoken": "^1.0.15",
+    "jsonc-parser": "^3.3.1",
     "openai": "^4.70.2"
   },
   "devDependencies": {
