--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -75,6 +75,7 @@
     "inquirer": "^12.0.1",
     "js-tiktoken": "^1.0.15",
     "jsonc-parser": "^3.3.1",
+    "minimatch": "^10.0.1",
     "openai": "^4.70.2"
   },
   "devDependencies": {
