--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -93,6 +93,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-regexp": "^2.6.0",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "rollup": "^4.12.0",
