--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -75,6 +75,7 @@
     "inquirer": "^12.0.1",
     "js-tiktoken": "^1.0.15",
     "jsonc-parser": "^3.3.1",
+    "minimatch": "^10.0.1",
     "openai": "^4.70.2"
   },
   "devDependencies": {
@@ -92,6 +93,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-regexp": "^2.6.0",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "rollup": "^4.12.0",
