feat(template): implement type-safe template system for AI prompts
Introduces a new template system with Handlebars support for AI operations:
• Add TemplateRegistry service with YAML-based template discovery
• Create comprehensive type definitions for different prompt templates
• Implement integration and unit tests for template functionality
• Add documentation for template system architecture and integration
• Update AI types to support template-based prompts
• Add Handlebars and YAML package dependencies

--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -72,11 +72,13 @@
     "@octokit/rest": "^21.0.2",
     "chalk": "^4.1.2",
     "commander": "^11.1.0",
+    "handlebars": "^4.7.8",
     "inquirer": "^12.0.1",
     "js-tiktoken": "^1.0.15",
     "jsonc-parser": "^3.3.1",
     "minimatch": "^10.0.1",
-    "openai": "^4.70.2"
+    "openai": "^4.70.2",
+    "yaml": "^2.6.0"
   },
   "devDependencies": {
     "@jest/types": "^29.6.3",
