--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -38,6 +38,11 @@
     "test:e2e:init:basic": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=init --scenario=init-basic",
     "test:e2e:init:global": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=init --scenario=init-global",
     "test:e2e:init:monorepo": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=init --scenario=init-monorepo",
+    "test:e2e:template:init": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=template --scenario=template-init-basic",
+    "test:e2e:template:validate": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=template --scenario=template-validate-valid",
+    "test:e2e:template:invalid": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=template --scenario=template-validate-invalid",
+    "test:e2e:template:list": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=template --scenario=template-list",
+    "test:e2e:template:custom": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=template --scenario=template-custom-path",
     "test:e2e:status:basic": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-basic",
     "test:e2e:status:global": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-global",
     "test:e2e:status:local": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-local",
